creation oeuvre auto via api ext
